//package config.protofiles;

//specify the package in which the generated class will be
//java_package = "protocol.config.buffer"

//specify the name of the generated class

syntax = "proto2";
option optimize_for = SPEED;

//request structure
message Request {
	
	//specify the type of request
	enum ReqType { REG = 1; LIN = 2; LOUT = 3; CALL = 4; ECALL = 5; }

	//request type is required
	required ReqType rq_type = 1;
	
	//specify timestamp
	required string timestamp = 2;

	//one of the following will be filled in
	optional Registration reg = 3;
	optional LogIn lin = 4;
	optional LogOut lout = 5;
	optional CallTo call_to = 6;
	optional EndCall end_call = 7;
		
	//registration request structure
	message Registration {
		//fields for registration
		required string username = 1;
		required string password = 2;
		optional string hint = 3;
	}
	
	//log in request structure
	message LogIn {
		//fields for log in
		required string username = 1;
		required string password = 2;

		//the ip address will remain in the cache of online users
		required string ip_address = 3;
	}

	//log out request structure
	message LogOut {
		//fields for log out
		required string username = 1;	
	}

	//call request structure
	message CallTo {
		//fields for call
		required string user_called = 1;
	}

	//end call structure
	message EndCall {
		//fields for end call
		required string user_ended = 1;		
	}
	
}
